--- a/templates/bookPage.html
+++ b/templates/bookPage.html
@@ -66,7 +66,7 @@
 
     <hr class="style14">
     {% if reviews %}
-    <div class="row justify-content-center" style="width: 100%;">
+    <div class="row justify-content-center">
         <div class="col-lg-10">
             <table class="table table-striped table-dark">
                 <thead>
