--- a/templates/login.html
+++ b/templates/login.html
@@ -45,9 +45,41 @@
                                 Sign Up
                             </a>
                         </div>
+                        </div>
+                        <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+                        <script>
+                          function onSignIn(googleUser) {
+                            // Useful data for your client-side scripts:
+                            var profile = googleUser.getBasicProfile();
+                            console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+                            console.log('Full Name: ' + profile.getName());
+                            console.log('Given Name: ' + profile.getGivenName());
+                            console.log('Family Name: ' + profile.getFamilyName());
+                            console.log("Image URL: " + profile.getImageUrl());
+                            console.log("Email: " + profile.getEmail());
+                    
+                            // The ID token you need to pass to your backend:
+                            var id_token = googleUser.getAuthResponse().id_token;
+                            console.log("ID Token: " + id_token);
+                          }
+                        </script>
                     </form>
                 </div>
             </div>
         </div>
     </form>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+    <script src="{{url_for('static', filename='js/boot4script.js')}}"></script>
+    <script>
+        $(window).load(function() {
+            boot4.alert(
+            {
+            msg: "Because your time are so important to me, You can login by this information to test my website without register new account. <br>Email: tester@domain.com <br>Password: 123456tester",
+            title: "Hey!",
+            callback: function() {
+                console.log("callback");
+            }
+            },"OK");
+        });
+    </script>
 {% endblock %}
